# llm-gcp

./: .dockerignore  README.md
app/: langchain.py  main.py
app/models/: chat_message.py
cloud-run-langchain/: Dockerfile  README.md  requirements.txt
cloud-run-langchain/app/: auth.py  chat.py  history.py  langchain.py  main.py
cloud-run-langchain/app/models/: chat_message.py
firestore-pgvector/: .firebaserc  .gitignore  POSTINSTALL.md  PREINSTALL.md  README.md  extension.yaml  firebase.json  pyproject.toml  scripts.py
firestore-pgvector/extensions/: firestore-pgvector-11.env  firestore-pgvector-16.env  firestore-pgvector-2.env  firestore-pgvector.env
firestore-pgvector/functions/: config.py  main.py  playground.py  requirements.txt  setup_pgvector_script.py
firestore-pgvector/functions/utils/: database.py  datapoint.py  firestore.py  force_sync.py  llm.py
repro/: .firebaserc  README.md  extension.yaml  firebase.json  scripts.py
repro/functions/: config.py  main.py  requirements.txt
